fix(desktopevents): fix the overlapping that calendar makes while moving the all events button

--- a/src/styles/EventCard.module.css
+++ b/src/styles/EventCard.module.css
@@ -1,6 +1,5 @@
 .contai {
     /* box-shadow: 0px 0px 0px -20px grey; */
-    background: rgba(255, 255, 255, 0.3);
     text-align: center;
     border-radius: 5px;
     margin-bottom: 15px;
